# ChangeLog for media-libs/gstreamer
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/gstreamer/ChangeLog,v 1.203 2008/04/14 19:10:41 fmccor Exp $

  14 Apr 2008; Ferris McCormick <fmccor@gentoo.org>
  gstreamer-0.10.17.ebuild:
  Sparc stable, required for Security Bug #217609.

  14 Apr 2008; Markus Rothe <corsair@gentoo.org> gstreamer-0.10.17.ebuild:
  Stable on ppc64

*gstreamer-0.10.19 (03 Apr 2008)

  03 Apr 2008; Zaheer Abbas Merali <zaheerm@gentoo.org> 
  +gstreamer-0.10.19.ebuild:
  version bump

  08 Mar 2008; Olivier Crête <tester@gentoo.org> gstreamer-0.10.17.ebuild:
  Check is needed to build libgstcheck, not just for gst's tests, making it
  non-optional

  02 Feb 2008; Samuli Suominen <drac@gentoo.org> -gstreamer-0.10.15.ebuild:
  Remove unused version.

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  gstreamer-0.10.15.ebuild:
  revert stable x86

  01 Feb 2008; Samuli Suominen <drac@gentoo.org> -gstreamer-0.10.11.ebuild,
  -gstreamer-0.10.12.ebuild, -gstreamer-0.10.16.ebuild:
  Remove unused versions.

  01 Feb 2008; Christian Faulhammer <opfer@gentoo.org>
  gstreamer-0.10.15.ebuild:
  stable x86, bug 208366

*gstreamer-0.10.17 (31 Jan 2008)

  31 Jan 2008; Zaheer Abbas Merali <zaheerm@gentoo.org>
  +gstreamer-0.10.17.ebuild:
  version bump

*gstreamer-0.10.16 (29 Jan 2008)

  29 Jan 2008; <zaheerm@gentoo.org> +gstreamer-0.10.16.ebuild:
  version bump

  23 Jan 2008; Samuli Suominen <drac@gentoo.org> gstreamer-0.10.15.ebuild:
  Block <gst-plugins-ugly-0.10.6-r1 because it has incompatible mpegaudioparse
  and that breaks MP3 playback.

*gstreamer-0.10.15 (17 Nov 2007)

  17 Nov 2007; Samuli Suominen <drac@gentoo.org> +gstreamer-0.10.15.ebuild:
  Version bump.

  01 Nov 2007; Raúl Porcel <armin76@gentoo.org> gstreamer-0.10.14.ebuild:
  sparc stable wrt #190900, thanks to Alex Maclean for testing

  11 Oct 2007; Tom Gall <tgall@gentoo.org> gstreamer-0.10.14.ebuild: